css fixes - dark mode

--- a/src/app/layouts/admin-layout/admin-layout.component.scss
+++ b/src/app/layouts/admin-layout/admin-layout.component.scss
@@ -29,7 +29,6 @@ hr {
 
  .mat-card{
   padding:0 !important;
-  background-color: transparent;
 }
 .mat-card-subtitle
 {
